fix multi-img test bug

--- a/configs/e2e_ms_rcnn_R_50_FPN_1x_Tencent.yaml
+++ b/configs/e2e_ms_rcnn_R_50_FPN_1x_Tencent.yaml
@@ -1,7 +1,7 @@
 MODEL:
   META_ARCHITECTURE: "GeneralizedRCNN"
   WEIGHT: "catalog://ImageNetPretrained/MSRA/R-50"
-  PRETRAINED_MODELS: 'pretrained_models'
+  PRETRAINED_MODELS: '../pretrained_models'
   BACKBONE:
     CONV_BODY: "R-50-FPN"
     OUT_CHANNELS: 256
@@ -42,10 +42,12 @@ INPUT:
   MIN_SIZE_TEST: 600
   MAX_SIZE_TEST: 960
 SOLVER:
-  IMS_PER_BATCH: 1
-  BASE_LR: 0.01
+  IMS_PER_BATCH: 4
+  BASE_LR: 0.00125
   WEIGHT_DECAY: 0.0001
   STEPS: (30000, 40000)
   MAX_ITER: 45000
   CHECKPOINT_PERIOD: 10000
-OUTPUT_DIR: output/
+TEST:
+  IMS_PER_BATCH: 8
+OUTPUT_DIR: ../output/
